--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
-	"name": "TiddlyMarker",
-	"version": "0.3.2",
+	"name": "webresearcher",
+	"version": "0.1",
 
 	"default_locale": "en",
 	"description": "__MSG_extensionDescription__",
@@ -40,8 +40,8 @@
 		}
 	},
 	"sidebar_action": {
-		"default_title" : "Tiddlywiki",
-		"default_panel": "notes.html"
+		"default_title" : "Notes",
+		"default_panel": "webresearcher/notes.html"
 	},
 	"commands": {
 		"_execute_sidebar_action": {
@@ -50,11 +50,11 @@
 			}
 		}
 	},
-	"content_scripts": [
+		"content_scripts": [
 	{
-		"matches": ["*://*/"],
-		"js": ["jquery.min.js","jquery-ui.min.js","jquery.cookie.min.js","popper.js","pell.min.js","notify.min.js","webresearcher.js"],
-		"css":["pell.css","jquery-ui.min.css"]
+		"matches": ["*://*/*"],
+		"js": ["ext_libs/jquery.min.js","ext_libs/jquery-ui.min.js","ext_libs/jquery.cookie.min.js","ext_libs/popper.js","ext_libs/pell.min.js","ext_libs/notify.min.js","webresearcher/webresearcher.js"],
+		"css":["ext_libs/pell.css","ext_libs/jquery-ui.min.css"]
 	}
 ]
 }
