--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
-	"name": "WebResearcherJS",
-	"version": "0.2.3",
+	"name": "tiddlyWebResearcher",
+	"version": "1.0.0",
 	"description": "https://github.com/kvgc/WebResearcherJS-extension",
 
 	"permissions": [
