--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "WebResearcherJS",
-	"version": "1.0.0beta",
+	"version": "1.0.0",
 	"description": "https://github.com/kvgc/WebResearcherJS-extension",
 
 	"permissions": [
@@ -36,7 +36,7 @@
   {
     "matches": ["*://*/*"],
     "js": ["webresearcher/contentScript.js"],
-		"run_at":"document_start"
+	"run_at":"document_start"
   }
 ],
 	"options_ui": {
