--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
 	"manifest_version": 2,
 	"name": "WebResearcherJS",
-	"version": "1.0.1",
+	"version": "2.0.0",
 	"description": "https://github.com/kvgc/WebResearcherJS-extension",
 
 	"permissions": [
-		"<all_urls>", "tabs", "storage","contextMenus"
+		"<all_urls>", "activeTab", "tabs", "storage","contextMenus"
 	],
 
 	"browser_action": {
@@ -19,7 +19,7 @@
 		}
 	},
 	"sidebar_action": {
-		"default_title" : "Notes",
+		"default_title" : "Joplin-search",
 		"default_panel": "webresearcher/notes.html"
 	},
 	"commands": {
