--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "WebResearcherJS",
-	"version": "5.0.0",
+	"version": "0.1",
 	"description": "https://github.com/kvgc/WebResearcherJS-extension",
 
 	"permissions": [
@@ -27,5 +27,9 @@
     "js": ["webresearcher/contentScript.js"],
 	"run_at":"document_start"
   }
-]
+],
+	"options_ui": {
+  "page": "options.html",
+  "browser_style": true
+}
 }
