--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
 	"manifest_version": 2,
 	"name": "WebResearcherJS",
-	"version": "6.0.2",
+	"version": "7.0.0",
 	"description": "https://github.com/kvgc153/WebResearcherJS-extension",
 
 	"permissions": [
-		"<all_urls>", "activeTab", "tabs", "storage","contextMenus"
+		"<all_urls>", "activeTab", "tabs","contextMenus"
 	],
 
 	"browser_action": {
@@ -27,9 +27,5 @@
     "js": ["webresearcher/contentScript.js"],
 	"run_at":"document_start"
   }
-],
-	"options_ui": {
-  "page": "options.html",
-  "browser_style": true
-}
+]
 }
